# tfg_24_25

./: .gitattributes  .gitignore  LICENSE  README.md
Ideas.rtfd/: TXT.rtf
doc/: anexos.tex  bibliografia.bib  bibliografiaAnexos.bib  memoria.tex
doc/tex/: 1_Introduccion.tex  2_Objetivos_del_proyecto.tex  3_Conceptos_teoricos.tex  4_Tecnicas_y_herramientas.tex  5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex  6_Trabajos_relacionados.tex  7_Conclusiones_Lineas_de_trabajo_futuras.tex  A_Plan_proyecto.tex  B_Requisitos.tex  C_Diseno.tex  D_Manual_programador.tex  E_Manual_usuario.tex  F_ODS.tex
prototypes/: .gitignore  androguard_feature_extraction.ipynb  download_apks.ipynb  drebin_tests.ipynb  hyperparameters_optimization.ipynb  ml_model.py  models_stats.ipynb  models_training.ipynb  preprocessing_utils.py  pyproject.toml  quantize_model.ipynb  test.csv  torch_nn.ipynb  torch_nn_model.py  torch_nn_model_2.py  torch_nn_model_io.py  torch_nn_model_io_2.py  torch_tests.ipynb  vocab_utils.py
src/: pyproject.toml
src/app/: data_utils.py  malware_interpreter_app.py  model_utils.py  original_malware_interpreter_app.py  shap_utils.py  ui_utils.py  umap_reducer.pkl
src/notebooks/: androguard_feature_extraction.ipynb  download_apks.ipynb  drebin_tests.ipynb  hyperparameters_optimization.ipynb  model_intrepretability.ipynb  models_stats.ipynb  models_training.ipynb  quantize_model.ipynb
src/prototypes/: ml_model_io.py  torch_apk_analysis_model.py  torch_apk_analysis_model_io.py  torch_drebin_model_io.py
src/utils/: feature_extraction.py  preprocessing_utils.py  vocab_utils.py
