[tool.poetry]
package-mode = false
authors      = ["dtx1007 <148854108+dtx1007@users.noreply.github.com>"]

[tool.poetry.dependencies]
python       = "^3.12"
numpy        = "^2.2.3"
pandas       = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib   = "^3.10.0"
jupyter      = "^1.1.1"
torchtext    = "^0.18.0"
torch        = { version = "2.3.0", source = "pytorch_cuda" }


[[tool.poetry.source]]
name     = "pytorch_cuda"
url      = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
